@@ -1,4 +1,7 @@
 
+2009-03-29 16:01 Ali aliov@xfce.org 
+	 * : Show an adapter icon if no battery device found and user select to always show icon
+
 2009-03-29 15:39 Ali aliov@xfce.org 
 	 * : Added xfpmshutdown to sync all the request
 
